Added updating numbering without refreshing doc

--- a/manifest.json
+++ b/manifest.json
@@ -37,7 +37,8 @@
     "web_accessible_resources": [
         {
             "resources": [
-                "content.js"
+                "enable.js",
+                "disable.js"
             ],
             "matches": [
                 "*://*.overleaf.com/*"
