--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 {
     "name": "Relative Line Numbering for Overleaf",
     "description": "Adds the ability to change the line numbering style in Overleaf to relative.",
-    "version": "1.0",
+    "version": "1.1",
     "manifest_version": 3,
     "background": {
         "service_worker": "background.js"
     },
-    "permissions": [
-        "storage"
-    ],
+    "permissions": ["storage"],
     "action": {
         "default_popup": "popup.html",
         "default_icon": {
@@ -26,23 +24,14 @@
     },
     "content_scripts": [
         {
-            "matches": [
-                "*://*.overleaf.com/*"
-            ],
-            "js": [
-                "inject.js"
-            ]
+            "matches": ["*://*.overleaf.com/*"],
+            "js": ["inject.js"]
         }
     ],
     "web_accessible_resources": [
         {
-            "resources": [
-                "enable.js",
-                "disable.js"
-            ],
-            "matches": [
-                "*://*.overleaf.com/*"
-            ]
+            "resources": ["enable.js", "disable.js"],
+            "matches": ["*://*.overleaf.com/*"]
         }
     ]
 }
