--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Relative Line Numbering for Overleaf",
+    "name": "Relative Line Numbering for Overleaf (Legacy Editor)",
     "description": "Adds the ability to change the line numbering style in Overleaf's Legacy editor to relative.",
     "version": "1.1",
     "manifest_version": 3,
